[package]
name = "bgpview"
version = "0.1.0"
authors = ["7sDream <i@7sdre.am>"]
description = "CLI tools for bgpview.io"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1",  features = ["derive"] }
serde_json = "1"
maplit = "1"
once_cell = "1"
rustls = "0.18"
webpki = "0.21"
webpki-roots = "0.20"
percent-encoding = "2"
httparse = "1"
anyhow = "1"
structopt = "0.3"
