[package]
name = "bgpview-cli"
version = "0.1.0"
authors = ["7sDream <i@7sdre.am>"]
edition = "2018"
description = "CLI tools for bgpview.io"
homepage = "https://github.com/7sDream/bgpview-cli"
repository = "https://github.com/7sDream/bgpview-cli"
readme = "README.md"
license = "Unlicense"
keywords = ["network", "bgp", "ip", "cli"]
categories = ["command-line-utilities"]

[dependencies]
serde = { version = "1",  features = ["derive"] }
serde_json = "1"
maplit = "1"
once_cell = "1"
rustls = "0.18"
webpki = "0.21"
webpki-roots = "0.20"
percent-encoding = "2"
httparse = "1"
anyhow = "1"
structopt = "0.3"
